@@ -1,3 +1,4 @@
+* Allow Many2One on ModelSQL to target ModelStorage
 * Manage Cache in Transaction
 * Allow to register multiple exit functions on Transaction
 * Return 429 status when too many login attempts
